# cmake_examples

./: .gitignore  LICENSE
.github/workflows/: build_and_test.yaml
cmake_example/: CMakeLists.txt  main.cpp
cmake_example_openssl/: CMakeLists.txt  main.cpp
cmake_multiprojects/: CMakeLists.txt
cmake_multiprojects/app/: CMakeLists.txt
cmake_multiprojects/lib/: CMakeLists.txt
cmake_multiprojects/lib/src/: awesomeLib.cpp
cmake_multiprojects_gtest/: CMakeLists.txt
cmake_multiprojects_gtest/app/src/: main.cpp
cmake_multiprojects_gtest/lib/: CMakeLists.txt
cmake_multiprojects_gtest/lib/include/awesomeLib/: awesomeHeader.h
cmake_multiprojects_gtest/lib/ut/: CMakeLists.txt  ut.cpp
